# CommitIQ

./: .gitignore  README.md  package-lock.json  package.json  postinstall.js
commitiq-cli/: Cargo.toml
commitiq-cli/src/: cli_handlers.rs  commit_generator.rs  config_manager.rs  main.rs  utils.rs
scripts/: build_rust_binary.sh  postinstall.sh
